kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'

    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /?(.*)
            #update path
            pathType: ImplementationSpecific
            # Add PathType
            backend:
              service:
                #Update Service Fields
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
